assets/css/admin.css
/* ... */
#misc-publishing-actions .publishing-notice.require-decryption-key .action-decryption-key input {
	text-align: left;
	width: 100%;
}

/* single column */
@media screen and (max-width: 850px) {

	#misc-publishing-actions .publishing-notice {
		max-width: none;
	}

	#misc-publishing-actions .publishing-notice.require-confirmation,
	#misc-publishing-actions .publishing-notice.require-decryption-key {
		margin-bottom: 0px;
	}

	#misc-publishing-actions .publishing-notice .action-decryption-key {
		width: auto;
	}
}

/* Item list */

.incassoos-item-list {
	margin: 6px 0px 0px 0px;
}

#incassoos_collection_consumers .incassoos-item-list,
#incassoos_activity_participants .incassoos-item-list,
#incassoos_occasion_consumers .incassoos-item-list,
#incassoos_order_products .incassoos-item-list {
	margin: 0px;
}

.incassoos-item-list ul {
	margin: 0px;
}

.incassoos-item-list li {
	position: relative;
	width: 100%;
	margin: 0px;
	padding: 0px 12px;
	box-sizing: border-box;
}

.incassoos-item-list .sublist li {
	width: 100%;
	margin: 0px;
	padding: 0px;
}

.incassoos-item-list .group {
	padding-bottom: 0px;
	display: inline-block;
}

.incassoos-item-list .group.hidden,
.incassoos-item-list .group.search-hidden {
	position: absolute !important;
	top: -9999px !important;
	left: -9999px !important;
}

.incassoos-item-list .open-details.opened,
.incassoos-item-list .open-details.opened + .item-details,
.incassoos-item-list .sublist > li > ul > li:hover {
	background: #fbfbfb;
}

.incassoos-item-list > ul > li:last-of-type {
	padding-bottom: 12px;
}

.incassoos-item-list > ul > li:not(.selector),
.incassoos-item-list ul .group {
	padding-top: 5px;
	padding-bottom: 10px;
}

.incassoos-item-list li > input {
	margin-top: 0px;
}

.incassoos-item-list .sublist-header {
	display: inline-block;
	margin: 0px;
	width: 100%;
	padding: 0px 12px 6px;
	vertical-align: middle;
	font-weight: normal;
	font-style: italic;
	box-sizing: border-box;
}

.incassoos-item-list label {
	display: inline-block;
	/*width: 100%;*/
}

.incassoos-post-edit .incassoos-item-list li input + label {
	width: calc( 100% - 24px );
}

.incassoos-post-edit .incassoos-item-list .products .order-product input + label {
	width: calc( 100% - 76px );
	padding-top: 4px;
	padding-bottom: 5px;
}

.incassoos-post-edit .incassoos-item-list .products .order-product.is-selected input + label {
	font-weight: bold;
}

.incassoos-item-list .item-date {
	display: block;
	color: #666;
}

.incassoos-item-list .details {
	display: block;
}

.incassoos-item-list .details [class$="count"],
.incassoos-item-list .details [class$="total"] {
	font-weight: 600;
	opacity: .7;
}

.incassoos-item-list .details [class$="total"]:before {
	content: '/';
	margin-right: 4px;
}

.incassoos-item-list .details .view-action {
	display: none;
}

.incassoos-item-list .details .view-action:before {
	content: '|';
	color: #ddd;
	margin: 0 4px;
}

.incassoos-item-list label:hover .details .view-action {
	display: inline-block;
}

.incassoos-item-list .activity-participant,
.incassoos-item-list .occasion-product {
	display: flex;
}

.incassoos-item-list .assets .asset .title,
.incassoos-item-list .users .consumer .title,
.incassoos-item-list .products .product .title {
	display: inline-block;
	font-weight: 600;
	vertical-align: middle;
	flex: 1;
	padding-right: 12px;
	box-sizing: border-box;
}

.incassoos-item-list .products .product .title {
	display: flex;
	width: 90%; /* 100% does not flow correctly flex layout */
}

.incassoos-item-list .assets .asset .title,
.incassoos-item-list .users .consumer .title,
.incassoos-item-list .products .product .title .label {
	text-overflow: ellipsis;
	overflow: hidden;
	white-space: pre;
}

.incassoos-item-list .products .product .title .price {
	padding-left: 3px;
	white-space: pre;
}

.incassoos-item-list .collection-consumer,
.incassoos-item-list .collection-consumer-type,
.incassoos-item-list .occasion-consumer,
.incassoos-item-list .occasion-consumer-type,
body.incassoos-post-view .incassoos-item-list .collection-consumer,
body.incassoos-post-view .incassoos-item-list .collection-consumer-type,
body.incassoos-post-view .incassoos-item-list .occasion-consumer,
body.incassoos-post-view .incassoos-item-list .occasion-consumer-type {
	padding: 0px;
}

.incassoos-item-list .open-details,
.incassoos-item-list .item-content {
	display: flex;
	width: 100%;
	padding: 5px 12px 7px;
	color: inherit;
	line-height: 20px;
	text-decoration: none;
	box-sizing: border-box;
}

.incassoos-item-list .item-details {
	display: none;
	margin-top: 2px;
	padding: 6px 12px 12px;
	opacity: .6;
}

.incassoos-item-list .open-details.opened + .item-details {
	display: block;
}

body.incassoos-post-view .incassoos-item-list .item-details li,
.incassoos-post-edit .incassoos-item-list .item-details li {
	padding: 0px;
	display: flex;
}

.incassoos-item-list .item-details .title {
	width: calc( 100% - 50px );
	padding-right: 12px;
	white-space: nowrap;
	text-overflow: ellipsis;
	overflow: hidden;
}

.incassoos-item-list .item-list-header {
	display: flex;
	align-items: start;
	flex-wrap: wrap;
	padding: 6px 12px 5px;
	border-bottom: 1px solid #eee;
}

.incassoos-item-list .item-list-header .quick-select {
	margin-right: 8px;
}

.incassoos-item-list .item-list-header .list-search {
	flex: 1;
	height: 28px;
	margin-right: 8px;
	padding: 4px 5px;
	line-height: 28px;
	vertical-align: middle;
	border: 0px;
}

.incassoos-item-list .item-list-header > label:first-child + .list-search,
body.incassoos_page_incassoos-consumers .incassoos-item-list:not(.bulk-editing) .item-list-header > .list-search {
	margin-left: -5px;
}

.incassoos-item-list .item-list-header #show-selected,
.incassoos-item-list .item-list-header #show-default-items {
	padding: 5px 3px 5.5px;
}
/* ... */

